--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -5,7 +5,7 @@
 #main {
   @include container;
   @include clearfix;
-  margin-top: 1em;
+  margin-top: 1.2em;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
@@ -64,6 +64,7 @@
     margin-top: 1em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
+    color: #8A2BE2;
   }
 
   p, li, dl {
