--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -61,12 +61,17 @@
     }
   }
   h1 {
+    margin-top: 1.2em;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid $border-color;
+    color: #4b6aa1;
+  }
+  h2 {
     margin-top: 1em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
-    color: #8A2BE2;
+    color: #6e91ce;
   }
-
   p, li, dl {
     font-size: 1em;
   }
