--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -43,7 +43,9 @@
     list-style-type: none;
   }
 }
-
+.greedy-nav {
+  background-color: #b8cdef;
+}
 .masthead__menu-home-item {
   background-color: #b8cdef;
   @include breakpoint($medium) {
